Fixed the drop down width on small screens

--- a/client/stylesheets/less/donation_landing.less
+++ b/client/stylesheets/less/donation_landing.less
@@ -120,20 +120,6 @@
     margin-right: auto;
   }
   .gradiant-button {
-    /*background-image: -webkit-linear-gradient(top,#5cb85c 0,#419641 100%);
-    background-image: -o-linear-gradient(top,#5cb85c 0,#419641 100%);
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#5cb85c),to(#419641));
-    background-image: linear-gradient(to bottom,#5cb85c 0,#419641 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5cb85c', endColorstr='#ff419641', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-    background-repeat: repeat-x;
-    border-color: #3e8f3e;*/
-    /*background-image: -webkit-linear-gradient(top,#128c84 0,#00A89D 100%);
-    background-image: -o-linear-gradient(top,#128c84 0,#00A89D 100%);
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#128c84),to(#00A89D));
-    background-image: linear-gradient(to bottom,#128c84 0,#00A89D 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5cb85c', endColorstr='#ff419641', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);*/
     background-color: #128c84;
   }
   .gradiant-button-gray {
